<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:background="@drawable/tour_show_bg"
    android:elevation="20dp"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_margin="5dp"
        android:background="@drawable/network"
        android:backgroundTint="@color/shadeRed"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/red"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/internetSucces"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/no_internet"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setImage" />

    <TextView
        android:id="@+id/internet_Message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/please_check_your_internet_connection_and_than_try_again"
        android:textAlignment="center"
        android:textColor="@color/shadowColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internetSucces" />

    <Button
        android:id="@+id/tryAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/withdraw_bg"
        android:padding="10dp"
        android:stateListAnimator="@null"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internet_Message" />

    <Button
        android:id="@+id/CloseApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_bg"
        android:padding="10dp"
        android:stateListAnimator="@null"
        android:text="@string/close_app"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/internet_Message"
        app:layout_constraintTop_toTopOf="@+id/tryAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>